SFDC Automation/src/objects/Executive_Call_Notes__c.object
<CustomObject>
    <fields>
        <fullName>Action_Items_for_Call__c</fullName>
        <inlineHelpText>Items Executive was Supposed to Address in Call</inlineHelpText>
        <label>Action Items for Call</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Items_to_work_on__c</fullName>
        <inlineHelpText>Please be sure to cover what needs to be done, specify by whom at Ryder and by when</inlineHelpText>
        <label>Action Items to work on</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_items_from_previous_call__c</fullName>
        <description>To have as a reference what was discussed on previous call</description>
        <label>Action items from previous call</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <label>Call Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contacted_Person__c</fullName>
        <description>To indicate the name of the actual person that our executive spoke to, if different from Primary Contact</description>
        <inlineHelpText>Please indicate the name of the person you talked to if different from the Primary Contact</inlineHelpText>
        <label>Contacted Person</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Call__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date of Call</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsors__c</fullName>
        <label>Executive Account</label>
        <referenceTo>Executive_Sponsors__c</referenceTo>
        <relationshipLabel>Executive Call Notes</relationshipLabel>
        <relationshipName>Executive_Call_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status_update_from_previous_call__c</fullName>
        <description>To indicate what has been done on action items since last call</description>
        <label>Status update from previous call</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Executive Call Notes</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{00000}</displayFormat>
        <label>Executive Call Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Executive Call Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>